--- a/database_design.ipynb
+++ b/database_design.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPRCLMU/viW4VT+Z1HN6/n2",
+      "authorship_tag": "ABX9TyO97l4pzQUpmbNj1iIzP5Za",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -690,6 +690,41 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "import json\n",
+        "\n",
+        "api_url =  'http://localhost:8000/docs'\n",
+        "params = {\n",
+        "    'key': 'your_api_key',\n",
+        "    'query_param1': 'value1',\n",
+        "    'query_param2': 'value2'\n",
+        "}\n",
+        "\n",
+        "# Send a GET request to the API\n",
+        "response = requests.get(api_url, params=params)\n",
+        "\n",
+        "# Check if the request was successful\n",
+        "if response.status_code == 200:\n",
+        "\n",
+        "    data = response.json()\n",
+        "\n",
+        "\n",
+        "    print(\"Fetched Data:\", json.dumps(data, indent=4))\n",
+        "\n",
+        "    with open('fetched_data.json', 'w') as f:\n",
+        "        json.dump(data, f, indent=4)\n",
+        "else:\n",
+        "    print(f\"Failed to fetch data. Status code: {response.status_code}\")\n"
+      ],
+      "metadata": {
+        "id": "lQEUpdZDZmKb"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
