--- a/database_design.ipynb
+++ b/database_design.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO97l4pzQUpmbNj1iIzP5Za",
+      "authorship_tag": "ABX9TyPTpVqsJ/3D34oWAfa4nxxv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -697,7 +697,7 @@
         "import requests\n",
         "import json\n",
         "\n",
-        "api_url =  'http://localhost:8000/docs'\n",
+        "api_url =  'http://localhost:8000/users'\n",
         "params = {\n",
         "    'key': 'your_api_key',\n",
         "    'query_param1': 'value1',\n",
