--- a/database_design.ipynb
+++ b/database_design.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6g+Ubh9y2sae07k3QT/m0",
+      "authorship_tag": "ABX9TyPpNmvqLKFXdfBE5PV5nFYZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,8 @@
         "import numpy as np\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
+        "from sklearn.metrics import classification_report\n",
         "import requests\n",
         "import joblib\n",
         "\n",
@@ -66,31 +67,74 @@
         "\n",
         "        # Split the data\n",
         "        X_train, X_test, y_train, y_test = train_test_split(\n",
-        "            X, y, test_size=0.2, random_state=42\n",
+        "            X, y, test_size=0.2, random_state=42, stratify=y  # Added stratification\n",
         "        )\n",
         "\n",
-        "        # Train Random Forest model (better than Decision Tree for this case)\n",
-        "        self.model = RandomForestClassifier(\n",
-        "            n_estimators=100,\n",
-        "            max_depth=10,\n",
-        "            random_state=42\n",
+        "        # Define parameter grid for GridSearchCV\n",
+        "        param_grid = {\n",
+        "            'n_estimators': [50, 100, 200],\n",
+        "            'max_depth': [5, 8, 10],\n",
+        "            'min_samples_split': [2, 5, 10],\n",
+        "            'min_samples_leaf': [1, 2, 4],\n",
+        "            'max_features': ['sqrt', 'log2']\n",
+        "        }\n",
+        "\n",
+        "        # Initialize base model\n",
+        "        base_model = RandomForestClassifier(\n",
+        "            random_state=42,\n",
+        "            class_weight='balanced',  # Handle class imbalance\n",
+        "            oob_score=True  # Enable out-of-bag score\n",
         "        )\n",
-        "        self.model.fit(X_train, y_train)\n",
+        "\n",
+        "        # Perform grid search with cross-validation\n",
+        "        grid_search = GridSearchCV(\n",
+        "            estimator=base_model,\n",
+        "            param_grid=param_grid,\n",
+        "            cv=5,\n",
+        "            scoring='balanced_accuracy',\n",
+        "            n_jobs=-1,\n",
+        "            verbose=1\n",
+        "        )\n",
+        "\n",
+        "        # Fit grid search\n",
+        "        grid_search.fit(X_train, y_train)\n",
+        "\n",
+        "        # Get best model\n",
+        "        self.model = grid_search.best_estimator_\n",
         "\n",
         "        # Print model performance\n",
         "        train_score = self.model.score(X_train, y_train)\n",
         "        test_score = self.model.score(X_test, y_test)\n",
+        "        cv_scores = cross_val_score(self.model, X, y, cv=5)\n",
+        "\n",
+        "        print(\"Model Performance:\")\n",
+        "        print(f\"Best parameters: {grid_search.best_params_}\")\n",
         "        print(f\"Training accuracy: {train_score:.3f}\")\n",
         "        print(f\"Testing accuracy: {test_score:.3f}\")\n",
+        "        print(f\"Cross-validation scores: {cv_scores}\")\n",
+        "        print(f\"Mean CV score: {cv_scores.mean():.3f} (+/- {cv_scores.std() * 2:.3f})\")\n",
+        "        print(f\"OOB score: {self.model.oob_score_:.3f}\")\n",
+        "\n",
+        "        # Print detailed classification report\n",
+        "        y_pred = self.model.predict(X_test)\n",
+        "        print(\"\\nClassification Report:\")\n",
+        "        print(classification_report(y_test, y_pred))\n",
+        "\n",
+        "        # Feature importance analysis\n",
+        "        feature_importance = pd.DataFrame({\n",
+        "            'feature': X.columns,\n",
+        "            'importance': self.model.feature_importances_\n",
+        "        }).sort_values('importance', ascending=False)\n",
+        "        print(\"\\nTop 10 Most Important Features:\")\n",
+        "        print(feature_importance.head(10))\n",
         "\n",
         "        # Save the model and scaler\n",
         "        joblib.dump(self.model, 'user_behavior_rf_model.joblib')\n",
         "        joblib.dump(self.scaler, 'scaler.joblib')\n",
         "\n",
-        "    def fetch_latest_entry(self, api_url=\" https://database-design-pld5.onrender.com/docs#/\"):\n",
+        "    def fetch_latest_entry(self, api_url=\"https://database-design-pld5.onrender.com/docs#/\"):\n",
         "        \"\"\"\n",
         "        Fetch the latest entry from the API\n",
-        "        Note: Replace the API URL with your actual endpoint\n",
         "        \"\"\"\n",
         "        try:\n",
         "            response = requests.get(api_url)\n",
@@ -133,6 +177,9 @@
         "        \"\"\"\n",
         "        Make prediction for new input data\n",
         "        \"\"\"\n",
+        "        if self.model is None:\n",
+        "            raise ValueError(\"Model has not been trained yet. Please train the model first.\")\n",
+        "\n",
         "        # Prepare input data\n",
         "        prepared_data = self.prepare_input_data(input_data)\n",
         "\n",
@@ -158,7 +205,6 @@
         "    # Train the model\n",
         "    print(\"Training model...\")\n",
         "    predictor.train_model()\n",
-        "\n",
         "\n",
         "    print(\"\\nFetching latest entry...\")\n",
         "\n",
@@ -188,17 +234,64 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F4zQ4CCXweRr",
-        "outputId": "6e5cd657-4bab-4925-a350-7223be963f8e"
+        "outputId": "6f77168f-45f1-4b6f-b457-7a7c3468b3c5"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Training model...\n",
+            "Fitting 5 folds for each of 162 candidates, totalling 810 fits\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/numpy/ma/core.py:2820: RuntimeWarning: invalid value encountered in cast\n",
+            "  _data = np.array(data, dtype=dtype, copy=copy,\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model Performance:\n",
+            "Best parameters: {'max_depth': 5, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50}\n",
             "Training accuracy: 1.000\n",
             "Testing accuracy: 1.000\n",
+            "Cross-validation scores: [1. 1. 1. 1. 1.]\n",
+            "Mean CV score: 1.000 (+/- 0.000)\n",
+            "OOB score: 1.000\n",
+            "\n",
+            "Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           1       1.00      1.00      1.00        27\n",
+            "           2       1.00      1.00      1.00        29\n",
+            "           3       1.00      1.00      1.00        29\n",
+            "           4       1.00      1.00      1.00        28\n",
+            "           5       1.00      1.00      1.00        27\n",
+            "\n",
+            "    accuracy                           1.00       140\n",
+            "   macro avg       1.00      1.00      1.00       140\n",
+            "weighted avg       1.00      1.00      1.00       140\n",
+            "\n",
+            "\n",
+            "Top 10 Most Important Features:\n",
+            "                            feature  importance\n",
+            "3          Number of Apps Installed    0.257632\n",
+            "4               Data Usage (MB/day)    0.236124\n",
+            "2           Battery Drain (mAh/day)    0.182526\n",
+            "0          App Usage Time (min/day)    0.160089\n",
+            "1        Screen On Time (hours/day)    0.150328\n",
+            "5                               Age    0.005832\n",
+            "8   Device Model_Samsung Galaxy S21    0.001850\n",
+            "14                      Gender_Male    0.001837\n",
+            "7            Device Model_OnePlus 9    0.001120\n",
+            "12             Operating System_iOS    0.000783\n",
             "\n",
             "Fetching latest entry...\n",
             "\n",
@@ -206,14 +299,14 @@
             "\n",
             "Prediction Results:\n",
             "Predicted User Behavior Class: 5\n",
-            "Prediction Confidence: 100.00%\n",
+            "Prediction Confidence: 97.87%\n",
             "\n",
             "Class Probabilities:\n",
             "Class 0: 0.00%\n",
             "Class 1: 0.00%\n",
             "Class 2: 0.00%\n",
-            "Class 3: 0.00%\n",
-            "Class 4: 1.00%\n"
+            "Class 3: 0.02%\n",
+            "Class 4: 0.98%\n"
           ]
         }
       ]
